using System.Collections;
using System.Collections.Generic;
using UnityEngine;
using UnityEngine.UI;

public class Weapon : MonoBehaviour
{
    public bool weaponMode = false;
    public bool enemyControlled = false;
    private bool canShoot = true;
    private bool meleeAttack;
    public bool isWalking;
    public bool weaponThrown;
    public bool isReloading;
    public bool mouseHold;

    public int bulletsPerShot = 1;
    public int weaponType = 0; //(For Enemy AI) Type 0 = Pistol    Type 1 = AssultRifle/Burst
    public int weaponID = 0;
    public float spread = 0;
    public float playerSpread = 0;
    private List<Quaternion> bullets;

    public int clipSize = 10;
    public int maxClipSize = 30;
    public int startingAmmo = 10;
    public int ammoCost = 1;
    public int meleeDamage = 1;
    public int enemiesPerMeleeAttack = 3;
    private int currentEnemiesPerMelleAttack;
    public int ammoOutClip;
    public int ammoInClip;

    public float fireForce = 20;
    public float playerFireForceMultiplier = 2;
    public float fireRate = 0.1f;
    public float reloadTime = 1;
    public float bulletDestroyTime = 10f;
    public float meleeTime = 0.1f;
    private float throwBackForce = 500;

    public string attackAnimation;

    public GameObject projectile;
    public GameObject shootPoint;
    public GameObject muzzleFlashPoint;
    public GameObject arms;
    private GameObject player;

    private Rigidbody rb;

    public Text ammoCounter;

    private Animator animator;

    public AudioClip shootSound;
    public AudioClip reloadSound;
    public AudioClip initReloadSound;
    public AudioClip noAmmoSound;

    public float reloadSoundDelay = 1f;

    private AudioSource audioSource;
    public Transform shootPointTransform;

    public GameObject resetModel;
    public Transform resetTransform;

    private void Awake()
    {
        bullets = new List<Quaternion>(bulletsPerShot);

        for (int i = 0; i < bulletsPerShot; i++)
        {
            bullets.Add(Quaternion.Euler(Vector3.zero));
        }

        player = GameObject.Find("Player");

        if (gameObject.GetComponent<AudioSource>())
        {
            audioSource = gameObject.GetComponent<AudioSource>();
        }

        if (arms)
        {
            arms.SetActive(false);
        }
    }

    void Start()
    {

        if (startingAmmo >= clipSize)
        {
            ammoInClip = clipSize;
            ammoOutClip = startingAmmo - clipSize;
        }
        else
        {
            ammoInClip = startingAmmo;
            ammoOutClip = 0;
        }

        if (gameObject.GetComponent<Animator>())
        {
            animator = gameObject.GetComponent<Animator>();
        }

        if (gameObject.GetComponent<Rigidbody>())
        {
            rb = gameObject.GetComponent<Rigidbody>();
        }

        if (muzzleFlashPoint)
        {
            shootPointTransform = muzzleFlashPoint.transform;
        }
    }

    void Update()
    {
        if (weaponMode && !enemyControlled && !isReloading)
        {
            if (!mouseHold && Input.GetMouseButtonDown(0) && canShoot)
            {
                FireWeapon();
            }
            else if (mouseHold && Input.GetMouseButton(0) && canShoot)
            {
                FireWeapon();
            }

            if (ammoInClip < clipSize && ammoOutClip > 0 && Input.GetKeyDown(KeyCode.R))
            {
                Reload();
            }


            if (animator)
            {
                if ((Input.GetKey(KeyCode.W) || Input.GetKey(KeyCode.A) || Input.GetKey(KeyCode.S) || Input.GetKey(KeyCode.D)) && !isWalking)
                {
                    isWalking = true;

                    animator.SetBool("isWalking", true);
                }
                else if (!(Input.GetKey(KeyCode.W) || Input.GetKey(KeyCode.A) || Input.GetKey(KeyCode.S) || Input.GetKey(KeyCode.D)) && isWalking)
                {
                    isWalking = false;

                    animator.SetBool("isWalking", false);
                }
            }
        }

        if(!weaponMode && !meleeAttack && rb.velocity.magnitude > 15)
        {
            meleeAttack = true;
        }
        else if (!weaponMode && meleeAttack && rb.velocity.magnitude < 15)
        {
            meleeAttack = false;

            weaponThrown = false;
        }
    }

    public void FireWeapon()
    {
        if (ammoInClip > 0) {
            canShoot = false;

            for (int i = 0; i < bulletsPerShot; i++)
            {
                bullets[i] = Random.rotation;
                if (projectile)
                {
                    GameObject bullet = Instantiate(projectile, shootPoint.transform.position, shootPoint.transform.rotation);
                    //bullet.GetComponent<Rigidbody>().AddForce(shootPoint.transform.forward * fireForce);
                    if (!enemyControlled)
                    {
                        bullet.GetComponent<Projectile>().bulletSpeed = fireForce * playerFireForceMultiplier;
                    }
                    else
                    {
                        bullet.GetComponent<Projectile>().bulletSpeed = fireForce;
                    }

                    if (enemyControlled)
                    {
                        bullet.transform.rotation = Quaternion.RotateTowards(shootPoint.transform.rotation, bullets[i], spread);
                    }
                    else
                    {
                        bullet.transform.rotation = Quaternion.RotateTowards(shootPoint.transform.rotation, bullets[i], playerSpread);
                    }

                    if (enemyControlled)
                    {
                        bullet.layer = 17;
                    }

                    Destroy(bullet, bulletDestroyTime);
                }
                else
                {
                    Debug.Log("Melee Attack");

                    meleeAttack = true;

                    gameObject.GetComponent<BoxCollider>().isTrigger = true;
                    gameObject.GetComponent<BoxCollider>().enabled = true;

                    if (animator && !enemyControlled)
                    {
                        animator.Play(attackAnimation);
                    }

                    Invoke("MeleeReset", meleeTime);
                }
            }

            if (animator && !meleeAttack && !enemyControlled)
            {
                animator.Play(attackAnimation);

                //animator.SetBool("shoot", true);
            }

            ammoInClip -= ammoCost;
            if (ammoInClip <= 0 && ammoOutClip > 0)
            {
                Reload();
            }
            else
            {
                Invoke("FireRateReset", fireRate);
            }

            if (!enemyControlled)
            {
                UpdateAmmoCounter();
            }

            if (shootSound && audioSource)
            {
                audioSource.clip = shootSound;

                audioSource.Play();
            }
        }
        else
        {
            if (audioSource)
            {
                audioSource.clip = noAmmoSound;
                audioSource.time = 4.5f;
                audioSource.Play();
            }
        }
    }

    private void OnTriggerEnter(Collider other)
    {
        if (meleeAttack)
        {
            if (other.GetComponent<RobotCollisionBox>())
            {
                if (other.GetComponent<RobotCollisionBox>().robotParent.GetComponent<RobotAI>())
                {
                    other.GetComponent<RobotCollisionBox>().robotParent.GetComponent<RobotAI>().TakeDamage(meleeDamage);
                }
                else if (other.GetComponent<RobotCollisionBox>().robotParent.GetComponent<UnfinishedRobot>())
                {
                    other.GetComponent<RobotCollisionBox>().robotParent.GetComponent<UnfinishedRobot>().TakeDamage(meleeDamage);
                }
                other.GetComponent<RobotCollisionBox>().BreakOff();

                currentEnemiesPerMelleAttack++;

                if (currentEnemiesPerMelleAttack >= enemiesPerMeleeAttack)
                {
                    MeleeReset();
                }

                if (!weaponMode && weaponThrown)
                {
                    transform.LookAt(player.transform.position);

                    Vector3.Slerp(transform.position, player.transform.position, throwBackForce);

                    float mag = rb.velocity.magnitude;
                    rb.AddForce(transform.forward * (mag + throwBackForce));
                    rb.AddForce(transform.up * (throwBackForce / 8));

                    Debug.Log(gameObject.name + " throwback " + ((transform.position - player.transform.position).normalized * throwBackForce));
                }
            }
            else if (other.GetComponent<VentOpening>())
            {
                other.GetComponent<VentOpening>().Open(gameObject);
                other.GetComponent<Rigidbody>().AddForce(Vector3.forward * fireForce);
            }
        }
    }

    private void MeleeReset()
    {
        if (weaponMode)
        {
            gameObject.GetComponent<BoxCollider>().isTrigger = false;
            gameObject.GetComponent<BoxCollider>().enabled = false;

            currentEnemiesPerMelleAttack = 0;

            meleeAttack = false;
        }
    }

    private void FireRateReset()
    {
        if (animator)
        {
            animator.SetBool("shoot", false);
        }

        canShoot = true;
    }

    private void Reload()
    {
        isReloading = true;

        if (animator)
        {
            animator.SetBool("isReloading", true);
        }
        if (reloadSound && audioSource)
        {
            audioSource.clip = initReloadSound;

            audioSource.Play();

            Invoke("PlaySound", reloadSoundDelay);
        }

        Invoke("FinishReloading", reloadTime);
    }

    void PlaySound()
    {
        if (reloadSound && audioSource)
        {
            audioSource.clip = reloadSound;

            audioSource.Play();
        }
    }

    private void FinishReloading()
    {
        isReloading = false;

        if (animator)
        {
            animator.SetBool("isReloading", false);
        }

        ammoOutClip += ammoInClip;
        ammoInClip = 0;

        if (clipSize < ammoOutClip)
        {
            ammoInClip = clipSize;
            ammoOutClip -= clipSize;
        }
        else
        {
            ammoInClip = ammoOutClip;
            ammoOutClip = 0;
        }

        canShoot = true;
        FireRateReset();
        UpdateAmmoCounter();
    }

    public void PickedUp(GameObject sp, Text ammoC)
    {
        WeaponMode();

        shootPoint = sp;
        ammoCounter = ammoC;

        UpdateAmmoCounter();
    }

    public void WeaponMode()
    {
        gameObject.GetComponent<Rigidbody>().isKinematic = true;
        gameObject.GetComponent<Rigidbody>().useGravity = false;
        gameObject.GetComponent<BoxCollider>().enabled = false;

        weaponMode = true;

        if (!enemyControlled)
        {
            if (animator)
            {
                animator.enabled = true;

                animator.SetBool("playerControlled", true);
            }

            if (arms != null)
            {
                arms.SetActive(true);
            }
        }
    }

    public void Drop(Vector3 direction, float force)
    {
        WeaponModeOff();

        gameObject.GetComponent<Rigidbody>().AddForce(direction * force);
        gameObject.GetComponent<Rigidbody>().AddForce(gameObject.transform.forward * (force/5));
    }

    public void Drop(Vector3 direction, float force, float torque)
    {
        WeaponModeOff();

        gameObject.GetComponent<Rigidbody>().AddForce(direction * force);
        gameObject.GetComponent<Rigidbody>().AddForce(gameObject.transform.forward * (force / 5));

        gameObject.GetComponent<Rigidbody>().AddTorque(transform.right * torque * 10);
    }

    public void ThrowDirection(Vector3 pos, float force)
    {
        WeaponModeOff();

        transform.LookAt(pos);

        gameObject.GetComponent<Rigidbody>().AddForce(transform.forward * force);
        gameObject.GetComponent<Rigidbody>().AddForce(gameObject.transform.up * (force / 5));
    }

    public void ThrowDirection(Vector3 pos, float force, float torque)
    {
        WeaponModeOff();

        transform.LookAt(pos);

        gameObject.GetComponent<Rigidbody>().AddForce(transform.forward * force);
        gameObject.GetComponent<Rigidbody>().AddForce(gameObject.transform.up * (force / 5));

        gameObject.GetComponent<Rigidbody>().AddTorque(transform.right * torque * 10);
    }

    public void WeaponModeOff()
    {
        if (animator)
        {
            animator.SetBool("playerControlled", false);

            animator.enabled = false;
        }

        if(resetModel && resetTransform)
        {
            resetModel.transform.position = resetTransform.position;
            resetModel.transform.rotation = resetTransform.rotation;
        }

        gameObject.GetComponent<Rigidbody>().isKinematic = false;
        gameObject.GetComponent<Rigidbody>().useGravity = true;
        gameObject.GetComponent<BoxCollider>().enabled = true;
        gameObject.GetComponent<BoxCollider>().isTrigger = false;

        if (arms)
        {
            arms.SetActive(false);
        }

        weaponMode = false;
        meleeAttack = false;
    }

    public void UpdateAmmoCounter()
    {
        if (gameObject.activeSelf && weaponMode && projectile)
        {
            ammoCounter.text = "Ammo: " + ammoInClip + " / " + ammoOutClip;
        }
    }
}
